# 7_dof_arm

./: .gitignore  README.md  readme.md  requirements.txt
config/: double_urdf_1115.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/franka_h2/: TrajectoryData.h
devel/lib/pkgconfig/: double_urdf_1115.pc  franka_h2.pc  myarm_moveit_configuration.pc
src/double_urdf_1115/: 1.rviz  CMakeLists.txt  package.xml
src/double_urdf_1115/config/: arm_control.yaml  double_urdf_1115.yaml
src/double_urdf_1115/launch/: display.launch  gazebo.launch  test.launch  test2.launch
src/double_urdf_1115/meshes/: Empty_Link1.STL  Empty_Link10.STL  Empty_Link11.STL  Empty_Link12.STL  Empty_Link13.STL  Empty_Link14.STL  Empty_Link2.STL  Empty_Link3.STL  Empty_Link4.STL  Empty_Link5.STL  Empty_Link6.STL  Empty_Link7.STL  Empty_Link8.STL  Empty_Link9.STL  base_link.STL
src/double_urdf_1115/scripts/: 1.py  joint_angle_listener.py  v_a_plot.py
src/double_urdf_1115/urdf/: double_urdf_1115.csv  double_urdf_1115.urdf  model.urdf
src/franka_h2/: CMakeLists.txt  package.xml
src/franka_h2/config/: panda_controller.yaml
src/franka_h2/launch/: RRT.launch  for_RL.launch  for_test_LM.launch  panda_h2.launch
src/franka_h2/msg/: TrajectoryData.msg
src/franka_h2/scripts/: Bi-RRT.py  CSI.py  Cubic_spline_interpolation.py  Cubic_spline_interpolation_inter.py  Cubic_spline_interpolation_simple.py  NSGA-2.py  (+13 more)
src/myarm_moveit_configuration/: .setup_assistant  CMakeLists.txt  package.xml
(+49 files in other folders)
