<package format="2">
  <name>double_urdf_1115</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for double_urdf_1115</p>
    <p>This package contains configuration data, 3D models and launch files
for double_urdf_1115 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
